Put explicit width on homepage icons to ensure consistent alignment

--- a/htdocs/components/80_images.css
+++ b/htdocs/components/80_images.css
@@ -5,7 +5,7 @@ img.bordered    { border:1px solid [[PANEL_BORDER]]; }
 img.float-left  { float:left;  margin: 0 16px 16px 0; padding: 0; }
 img.float-right { float:right; margin: 0 0 16px 16px; padding: 0; }
 
-div.homepage-icon { float:right; margin:8px 0 0 8px; }
+div.homepage-icon { float:right; width:112px; margin:8px 0 0 8px; }
 div.homepage-icon p { margin-top:2px; }
 
 /* Equivalents for imported WordPress feed */
